fix:#450 @GAZ.jsコールスタックがたまらない改良アルゴリズムを実装

--- a/demo/Demo_BasicFilter.html
+++ b/demo/Demo_BasicFilter.html
@@ -47,7 +47,7 @@
                         const renderer = new GAZ(imageData, context);
                         history.unshift(renderer);
                         canvas.addEventListener("click", function (e) {
-                            history[0].Blur(10)
+                            history[0].Sharpening()
                                 .then(newGAZ => {
                                     context.putImageData(newGAZ.ImageData, 0, 0);
                                     history.unshift(newGAZ);
