update:#147 @Demo_ScanlineSeedFill.html
ズーム・ズームアウト機能を追加

update:#155 @Demo_ScanlineSeedFill.html

canvasの背景を暗い市松模様にできるように

--- a/demo/Demo_BasicFilter.html
+++ b/demo/Demo_BasicFilter.html
@@ -15,7 +15,7 @@
         <br>
         よくあるフィルタ
     </h2>
-    <div class="canvas-wrapper">
+    <div id="canvas-wrapper"class="itimatsu-lite">
         <canvas id="canvas_main"></canvas>
     </div>
     <br>
